--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,11 @@ dependencies {
     def room_version = '1.1.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation('com.google.android.gms:play-services-maps:16.0.0'){
-        exclude group : 'com.android.support'
+    implementation('com.google.android.gms:play-services-maps:16.0.0') {
+        exclude group: 'com.android.support'
+    }
+    implementation('com.google.android.gms:play-services-places:16.0.0') {
+        exclude group: 'com.android.support'
     }
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.android.support:recyclerview-v7:28.0.0"
